Fixing Share buttons on mobile

--- a/resources/assets/components/Share/share.scss
+++ b/resources/assets/components/Share/share.scss
@@ -3,6 +3,15 @@
 .share {
   color: $white;
   width: 100%;
+  padding: 0;
+  margin-top: $half-spacing;
+  margin-left: $half-spacing / 2;
+  margin-right: $half-spacing / 2;
+
+  @include media($tablet) {
+    margin-left: $half-spacing;
+    margin-right: $half-spacing;
+  }
 
   &.-black {
     color: $dark-background-color;
